# Boletines-Informativos

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: boletin-semanal.yml
credentials/: .gitkeep
docs/: app.js  index.html  styles.css
docs/css/: styles.css
docs/data/: boletines.json
docs/js/: app.js  auth.js  config.js  paeTemplate.js  router.js  suggestFields.js
docs/js/pages/: admin.js  archive.js  bulletins.js  login.js
launchd/: cl.boletin.pae.semanal.plist
scripts/: regenerar_pdf.py  run_boletin.sh
src/boletin/: __init__.py  __main__.py  admin_app.py  analyzer.py  archive.py  cli.py  collector.py  config.py  drive.py  emailer.py  formatter.py  models.py  pdf_generator.py  pipeline.py  schedule_sync.py  sent_markers.py  supabase_store.py
supabase/: SETUP.md  schema.sql  seed_pae.sql  send_requests.sql  update_prices.sql
supabase/functions/suggest-bulletin/: index.ts
